# aws-greengrass-nucleus

./: .gitignore  .gitmodules  CHANGELOG.md  COMPATIBILITY.md  COMPONENT_CONFIG.md  CONFIGURE_COMPONENT_README.md  CONTRIBUTING.md  DEVELOPING.md  DIAGRAM.md  EvergreenKernel-1.0.0.yaml  GreengrassCore-2.0.0.yaml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW.md  IPC_SOCKET_INVESTIGATION.md  NOTICE  README.md  README_CONFIG_SCHEMA.md  README_SYSTEMD_GUIDANCE.md  RECIPE_REFERENCE.md  THIRD-PARTY-LICENSES  THIRD-PARTY-LICENSES.txt  assembly.xml  aws.greengrass.Nucleus-2.0.0.yaml  aws.greengrass.Nucleus.yaml  build.gradle  checkstyle.xml  commitlint.config.js  findbugs-exclude.xml  gradle.properties  nb-configuration.xml  nbactions.xml  nucleus-build-version.xml  pom.xml  pom2.xml  settings.gradle  settings.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature-request.md
.github/scripts/: binaryCompatibility.py  cover2cover.py  cwJMHUpload.py  cwUpload.py  decrypt_iot_thing_private_key_and_cert.sh  flake.py  test_iot_thing_certificate.pem.crt.gpg  test_iot_thing_private.pem.key.gpg  update_grub.sh
.github/workflows/: android.yml  benchmark.yaml  checkstyle-android.yml  checkstyle.yml  code-formatting.yml  codeql.yml  e2eTest.yml  externalPR.yml  flakeFinder.yaml  githubRelease.yml  maven.yml  otfUats.yaml
.license/: style.xml
android/: build.gradle  gradle.properties  quality.gradle  settings.gradle
android/app/: build.gradle  keystore_nucleus.jks
android/app/src/main/: AndroidManifest.xml
android/buildSrc/: build.gradle  settings.gradle
android/buildSrc/codestyle/: checkstyle.xml  pmd-eg-ruleset.xml
android/buildSrc/src/main/groovy/: code-validation.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/greengrass-nucleus-android/: build.gradle  jacoco.gradle  publish.gradle
android/greengrass-nucleus-android/config/: IntelliJ.xml  checkstyle-suppressions.xml  findbugs-exclude.xml
android/greengrass-nucleus-android/config/checkstyle/: checkstyle.xml
android/greengrass-nucleus-android/libs/: LICENSES.txt  aws-iot-device-sdk-android-1.5.4-SNAPSHOT.aar
android/greengrass-nucleus-android/src/main/: AndroidManifest.xml
android/tools/: rules.jj
codestyle/: IntelliJ.xml  checkstyle-suppressions.xml  checkstyle.xml  eclipse-formatter.xml  findbugs-exclude.xml  pmd-eg-ruleset.xml  pmd-eg-tests-ruleset.xml
conf/: nucleus-build.properties  nucleus.properties  recipe.yaml
coremqtt-jni/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  config.yaml.example  publisher-component-recipe.json
coremqtt-jni/include/: core_mqtt_config.h
coremqtt-jni/src/: coremqtt_channel_handler.c  coremqtt_channel_handler.h  coremqtt_jni.c
local_artifact_source/CustomerApp/0.9.0/: recipe.yaml
local_artifact_source/CustomerApp/0.9.1/: recipe.yaml
local_artifact_source/GreenSignal/1.0.0/: recipe.yaml
local_artifact_source/Mosquitto/1.0.0/: recipe.yaml
local_artifact_source/TickTock/1.0.0/: recipe.yaml
m1-demo/: README.md  REAME.md
m1-demo/part4/: MyFarmingApp.yaml  promote-local-dev-env-to-fleet.sh
m1-demo/pi_demo_code/evergreen-install/: launch-evergreen.sh
m1-demo/pi_demo_code/evergreen-part-1/recipeDir/: HelloWorld-1.0.0.yaml
m1-demo/pi_demo_code/evergreen-part-2/recipeDir/: HomeSecurityApp-1.0.0.yaml
m1-demo/pi_demo_code/evergreen-part-3/recipeDir/: HomeSecurityApp-1.0.0.yaml  StreamManager-1.1.0.yaml
m1-demo/pi_demo_code/evergreen-part-4/recipeDir/: HomeSecurityApp-0.1.14.yaml
m1-demo/pi_demo_code/evergreen-part-5/recipeDir/: HomeSecurityApp-0.1.15.yaml  HomeSecurityApp-1.0.0.yaml  HomeSecurityApp-1.0.1.yaml  StreamManager-1.1.0.yaml
m1-demo/prep/: zipPackage.py
m1-demo/prep/part4/: setConfig.json
scripts/: greengrass.service  greengrass.service.procd.template  greengrass.service.template  greengrass.xml.template  install-beta.sh  loader  loader.cmd  loader.sh
src/main/: AndroidManifest.xml
src/main/resources/: gg2launch
src/main/resources/config/: fallbackMain.evg  main.evg
src/test/evergreen-kernel-benchmark/: pom.xml  readme.md
src/test/evergreen-kernel-benchmark/mock_artifact_source/recipe/: docutils-0.14.0.yaml  jmespath-0.7.1.yaml  pyasn1-0.4.8.yaml  s3transfer-0.1.13.yaml  six-1.5.0.yaml  urllib3-1.20.0.yaml
src/test/evergreen-kernel-benchmark/mock_artifact_source/recipes/: PyYAML-3.10.0.yaml  PyYAML-3.13.0.yaml  awscli-1.16.144.yaml  boto3-1.9.128.yaml  botocore-1.12.128.yaml  botocore-1.12.134.yaml  colorama-0.2.5.yaml  colorama-0.3.9.yaml  docutils-0.10.0.yaml  docutils-0.12.0.yaml  docutils-0.14.0.yaml  jmespath-0.7.1.yaml  jmespath-0.8.0.yaml  jmespath-0.9.5.yaml  pyasn1-0.1.3.yaml  pyasn1-0.4.8.yaml  python-dateutil-2.3.0.yaml  python-dateutil-2.8.1.yaml  rsa-3.1.4.yaml  rsa-3.4.2.yaml  s3transfer-0.1.13.yaml  s3transfer-0.2.0.yaml  s3transfer-0.2.1.yaml  s3transfer-0.3.0.yaml  six-1.14.0.yaml  six-1.5.0.yaml  urllib3-1.20.0.yaml  urllib3-1.21.1.yaml  urllib3-1.24.3.yaml  urllib3-1.25.8.yaml
src/test/greengrass-nucleus-benchmark/: pom.xml  readme.md
uat/: pom.xml
uat/codebuild/: uat_linux_buildspec.yaml
(+2189 files in other folders)
